# TraceLab

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: regression_thresholds.json
docs/: baseline_artifacts.md
include/tracelab/: collectors.h  commands.h  constants.h  diagnosis.h  parsers.h  qemu.h  util.h
microbench/: mem_bw.c  syscall_rate.c
schema/: result.schema.json
scripts/: build_microbench.sh  check_regression.py  demo_linux.sh  run_wsl_tests.ps1  validate_schema.py  wsl_local_tests.sh
src/: main.cpp  qemu.cpp  util.cpp
src/collectors/: perf_stat.cpp  proc_status.cpp  strace_summary.cpp
src/commands/: compare.cpp  doctor.cpp  inspect.cpp  report.cpp  run.cpp
src/diagnosis/: rules.cpp
src/parsers/: perf_parser.cpp  strace_parser.cpp
tests/parser_fixtures/: minimal_result.json  perf_stat_localized_semicolon.csv  perf_stat_missing_fields.csv  perf_stat_sample.csv  perf_stat_with_unsupported.csv  strace_summary_localized_nonzero.txt  strace_summary_sample.txt  strace_summary_sparse.txt  synthetic_regression_compare.json
tests/unit/: compare_smoke.py  diagnosis_rules_tests.cpp  parser_tests.cpp  qemu_selector_tests.cpp  regression_gate_smoke.py  run_nonzero_smoke.py  run_qemu_invalid_arch_smoke.py
